--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "worker": "node ./worker/index.js"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "aws-sdk": "^2.1.4",
     "body-parser": "^1.10.0",
     "boom": "^2.6.1",
@@ -14,9 +15,7 @@
     "cookie-parser": "^1.3.3",
     "jade": "^1.8.2",
     "method-override": "^2.3.0",
-    "moment": "^2.8.4",
-    "morgan": "^1.5.0",
-    "node-uuid": "^1.4.2"
+    "morgan": "^1.5.0"
   },
   "devDependencies": {}
 }
