--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "config": "^1.9.0",
     "cookie-parser": "^1.3.3",
     "jade": "^1.8.2",
+    "lodash": "^2.4.1",
     "method-override": "^2.3.0",
     "morgan": "^1.5.0"
   },
