--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "server": "node ./server/index.js",
-    "worker": "node ./worker/index.js"
+    "start": "PORT=3000 nf start"
   },
   "dependencies": {
     "async": "^0.9.0",
